# CPPCMakeProject

./: CMakeLists.txt  CPPCMakeProject.code-workspace  Compiler Explorer C++ Editor MemcmpForMarketData.cpp  LICENSE  README.md
benchmark/: CMakeLists.txt
benchmark/mylib/: CMakeLists.txt  mylib_bench.cpp
benchmark/spdlog/: CMakeLists.txt  spdlog_benchmark.cpp
cmake/: ConfigClangFormat.cmake  ConfigClangTidy.cmake  ConfigCppCheck.cmake  ConfigGitRevision.cmake  ConfigSafeGuards.cmake  FindGBenchmark.cmake  FindGTest.cmake  FindGit.cmake  FindSpdLog.cmake  Findclang-format.cmake  Findclang-tidy.cmake  Findcppcheck.cmake  version_hpp.in
doc/doxygen/: CMakeLists.txt  doxyfile.in
doc/figures/: readme.txt
doc/html/: dir_3792680aad7a81f7afe64a585275c978.html  files.html  sum_8hpp_source.html  version_8hpp.html  version_8hpp__dep__incl.map  version_8hpp__dep__incl.md5  version_8hpp_source.html
doc/html/search/: searchdata.js
doc/latex/: dir_3792680aad7a81f7afe64a585275c978.tex  files.tex  refman.tex  version_8hpp.tex  version_8hpp__dep__incl.md5
mylib/: CMakeLists.txt  sum.cpp  sum.hpp  version.hpp
mymain/: CMakeLists.txt  main.cpp  version.hpp
test/: CMakeLists.txt
test/mylib/: CMakeLists.txt  mylib_test.cpp
tools/: SharedPtr.hpp  UniquePtr.hpp
